# ai-song-downloader

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
aisd/: __init__.py  logging.conf
aisd/src/: cli.py  config.py  download.py  helpers.py
aisd/src/ai/: __init__.py
aisd/src/ai/providers/: cohere.py
aisd/src/debug_tools/: utils.py
aisd/src/tests/: test_extract_url_regression.py
aisd/src/tests/regression/: Apple_Orchard_failed_entry_473.json  Daft_Punk_failed_entry_117.json  Daryl_Hall_&_John_Oates_failed_entry_838.json  Matt_Watson_failed_entry_353.json  The_Rolling_Stones_failed_entry_664.json  Will_Smith_failed_entry_1012.json
src/: __init__.py  cli.py  download.py
src/ai/: __init__.py
src/ai/providers/: base.py  cohere.py
src/tests/: test_extract_url_regression.py
src/tests/regression/: BkTheRula_failed_entry_322.json  Bu$hi_failed_entry_449.json  DJ_NB_failed_entry_306.json  I_Can’t_Help_Myself_(Sugar_Pie_Honey_Bunch)_failed_entry_529.json  Johnny_Rain_failed_entry_385.json  Keepin’_the_Faith_failed_entry_1068.json  Kylie_Minogue_failed_entry_70.json  The_Cardigans_failed_entry_949.json  The_Four_Tops_failed_entry_537.json  Toro_Y_Moi_failed_entry_244.json  Young_Turks_failed_entry_878.json  a-ha_failed_entry_680.json
