[project]
name = "aisd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "cohere>=5.13.4",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "pytube>=15.0.0",
    "typer>=0.15.1",
    "yt-dlp>=2024.12.13",
]
